# Object-Oriented-Programming

FinalExam/: CMakeLists.txt  Gui.cpp  Gui.h  Member.cpp  Member.h  Members.txt  Repo.cpp  Repo.h  Service.cpp  Service.h  SourceFile.cpp  SourceFile.h  SourceFiles.txt  main.cpp
a1-Timoficiuc-Daniel-1/: CMakeLists.txt  main.c
a11-12-Timoficiuc-Daniel/: Dogs.h  Gui12.cpp  GuiValidator.h  README.md  UndoRedo.cpp  UndoRedo.h  html.html
a14-Timoficiuc-Daniel/: Database.cpp  Database.h  Dogs.cpp  GUI.cpp  GUI.h  Gui12.h  GuiException.h  MyModel.cpp  MyModel.h  README.md  RepoExceptions.cpp  Service.cpp  Service.h  csv.csv  htmlUser.html  main.cpp  text.txt
a3-4-Timoficiuc-Daniel/: DynamicArray.c  DynamicArray.h  Estate.c  Estate.h  EstateRepo.c  EstateRepo.h  Service.c  Service.h  Ui.c  Ui.h  main.c
a5-6-Timoficiuc-Daniel/: README.md  Test.cpp  main.cpp
a5-6-Timoficiuc-Daniel/Domain/: Dog.cpp  Dog.h
a5-6-Timoficiuc-Daniel/Repo/: Database.cpp  Database.h  DynamicVectorTemplate.cpp  DynamicVectorTemplate.h
a5-6-Timoficiuc-Daniel/Service/: Service.cpp  Service.h
a5-6-Timoficiuc-Daniel/Ui/: Administrator.cpp  Administrator.h  Ui.cpp  Ui.h  User.cpp  User.h
a8-9-Timoficiuc-Daniel/: CMakeLists.txt  Doxyfile  Test.h  main.cpp
a8-9-Timoficiuc-Daniel/Comparator/: CompareByAge.cpp  CompareByAge.h  CompareByName.cpp  CompareByName.h  CompatatorBase.cpp  CompatatorBase.h  Sort.cpp
a8-9-Timoficiuc-Daniel/Domain/: Dog.cpp  Dog.h
a8-9-Timoficiuc-Daniel/GUI/: GUI.cpp  GUI.h
a8-9-Timoficiuc-Daniel/Repo/: Database.h  RepoExceptions.h  SaveToCSV.h  SaveToHTML.h  csv.csv  html.html  htmlUser.html  text.txt
a8-9-Timoficiuc-Daniel/Service/: Service.cpp  Service.h
a8-9-Timoficiuc-Daniel/Ui/: Administrator.cpp  Administrator.h  Interface.cpp  Interface.h  Ui.cpp  Ui.h  UiValidators.cpp  UiValidators.h  User.cpp  User.h  ValidatorException.cpp  ValidatorException.h
t1-Timoficiuc-Daniel-1/: CMakeLists.txt  README.md  domain.cpp  domain.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  ui.cpp  ui.h
t2-Timoficiuc-Daniel-1/: CMakeLists.txt  HospitalDepartment.cpp  HospitalDepartment.h  Interface.cpp  Interface.h  NeonatalUnit.cpp  NeonatalUnit.h  Service.cpp  Service.h  Surgery.cpp  Surgery.h  main.cpp  toSave.txt
t3-Timoficiuc-Daniel/: Answer.cpp  Answer.h  Answers.txt  CMakeLists.txt  Gui.cpp  Gui.h  Question.cpp  Question.h  Questions.txt  Repo.cpp  Repo.h  Service.cpp  Service.h  User.cpp  User.h  User.txt  main.cpp
